Removing linking in calendar
* Removed linkin in calendar

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
 			        listMonth: { buttonText: '' + list_month + '' }
 				},
 				defaultView: 'listMonth',
-			    navLinks: true,		// can click day/week names to navigate views
+			    navLinks: false,		// can click day/week names to navigate views
 			    editable: false,	// events are not drag 'n dropable
 			    eventLimit: true,	// allow "more" link when too many events
 				events: {
