header and veranstaltungseinheit updated, Calender auto-height

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -4,25 +4,12 @@
 		<!--	<img class="logo" src="./Pictures/WRK_Logo.jpg" alt="Logo"> -->
 			<a href="/" class="active">MATILDA</a>
 			<div class="dropdown">
-			 <button class="dropbtn">Materialverwaltung
-				<i class="fa fa-caret-down"></i>
-			 </button>
-			 <div class="dropdown-content">
-				<a href="material">Materialeingabe</a>
-			 </div>
+			 <a href="/material" class="active">Material</a>
+			  <a href="/veranstaltung">Veranstaltungen</a>
 			</div>
-			
+						
 			<div class="dropdown">
-			 <button class="dropbtn" th:text="#{veranstaltung}">
-				<i class="fa fa-caret-down"></i>
-			 </button>
-			 <div class="dropdown-content">
-				<a href="veranstaltung">Veranstaltung erstellen</a>
-			 </div>
-			</div>
-			
-			<div class="dropdown">
-			 <button class="dropbtn">Typen
+			 <button class="dropbtn">Erstellen von:
 				<i class="fa fa-caret-down"></i>
 			 </button>
 			 <div class="dropdown-content">
