--- a/src/main/resources/templates/veranstaltungbuchung.html
+++ b/src/main/resources/templates/veranstaltungbuchung.html
@@ -5,59 +5,62 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<title th:text="@{${@environment.getProperty('matilda.events')}}" />
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
- 	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}" />
- 	
  	<link rel="import" href="/fragment/topnav.html">
 </head>
 	<body>
-		<head th:replace="/fragment/header :: header"></head>	
-		<div th:replace="/fragment/footer :: footer"></div>
-		
-		<title th:text="@{${@environment.getProperty('matilda.events')}}"></title>
-		
-<h1>Buchung Übersicht</h1>
-<div th:unless="${#lists.isEmpty(veranstaltunggebucht)}">
+<h2>Buchung für Veranstaltung</h2>
+
+
 <table class="mainTable">
-<thead>
+
 <tr>
-<th>Bezeichnung</th>
-<th>Menge</th>
-<th>Veranstaltung</th>
-<th>Beschreibung</th>
-<th>Erstellt am</th>
-<th>Erstellt von</th>
+<th>Einheitentyp</th>
+<th>Materialtyp</th>
+<th>Materialien</th>
+<th>Standardmenge</th>
+<th>Wunschmaterial</th>
+<th>Wunschmenge</th>
 </tr>
-</thead>
-<dl th:each="buchung : ${veranstaltunggebucht}">
-<tr>
-<td th:text="${buchung.material.bezeichnung}"></td>
-<td th:text="${buchung.menge}"></td>
-<td th:text="${buchung.veranstaltung.name}"></td>
-<td th:text="${buchung.beschreibung}"></td>
-<td th:text="${buchung.createdAt}"></td>
-<td th:text="${buchung.modifiedBy}"></td>
+
+<tr  th:each="vb : ${veranstaltungBuchungWrapper.buchungList}">
+
+<td th:text="${vb.getEinheitentyp().getName()}"></td>	
+<td th:text="${vb.getMaterialtyp().getName()}"></td>
+        <td>
+          <table>
+            <tbody>
+              <tr>
+              <th>Num</th>
+              <th>Bezeichnung</th>
+		      <th>Bestand</th>
+              </tr>
+              <tr th:each="material,rowStat : ${vb.materialien}">   
+                <td th:text="${rowStat.count}"></td>   
+                <td th:text="${material.bezeichnung}"></td>
+                <td th:text="${material.bestand}"></td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+<td th:text="${vb.getStandardMenge()}"></td>
+<td th:text="${vb.getWunschMaterial()}"></td>
+<td th:text="${vb.getWunschMenge()}"></td>
+<td>
+<a href="#" data-th-href="@{/veranstaltungbuchungupdate/{id}(id=${vb.id})}">Bearbeiten</a>
+</td>		
 </tr>
 </table>
-</div>
-<hr/>
-<div class="container">
-<form action="#" th:action="@{/veranstaltungstornieren}" th:object="${veranstaltung}" method="post">
-<p><input type="submit" value="Stornieren" /> </p>
-<input type="button" value="Zurück" onclick="goBack()" class="bigButtons"/>
-			<script>
-			function goBack() {
-			    window.history.back();
-			}
-			</script>
+<form action="#" th:action="@{/veranstaltungbuchung}" th:object="${veranstaltungBuchung}" method="post">
+<p><input type="submit" value="Buchen" /> </p>
 </form>
+<div class="container">
+			<div th:if="${param.nomaterial}">
+				<div class="alert alert-info">Kein Material vorhanden</div>
+			</div>
 </div>
-	<div th:if="${param.nostorno}">
-		<div class="alert alert-info">
-			Stornieren einer Veranstaltung ist nur im Gebuchtzustand möglich!
-		</div>
-	</div>
 </body>
 </html>
