changed and added css files (+invalid password list )
* invalid password list was extended
* css files extended

--- a/src/main/resources/templates/buchung.html
+++ b/src/main/resources/templates/buchung.html
@@ -92,7 +92,7 @@
 			</div>
 
 			<p>
-				<input type="submit" value="Submit" onclick="goBack()"/>
+				<input type="submit" value="Bestätigen" onclick="goBack()"/>
 			</p>
 			<button onclick="goBack()" class="bigButtons">Abbrechen</button>
 		<script>
