--- a/src/main/resources/templates/neumaterial.html
+++ b/src/main/resources/templates/neumaterial.html
@@ -121,7 +121,7 @@
 		</div>
 		
 		<div class="row">
-			<input type="submit" value="Submit" />
+			<input type="submit" value="Bestätigen" />
 		<button onclick="goBack()" class="bigButtons">Abbrechen</button>
 		<script>
 			function goBack() {
