--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -32,6 +32,7 @@
 			 </div>
 			</div>
 			<a href="/lagerstandort" class="active">Lagerstandort</a>
+			<a href="/report" classe="active">Report</a>
 
 			<div class="dropdownAdmin">
 				<button class="dropbtnAdmin" th:text="#{konto}">
