--- a/src/main/resources/templates/einheitentypupdate.html
+++ b/src/main/resources/templates/einheitentypupdate.html
@@ -34,7 +34,7 @@
         th:text="${error}">Validation error</p>
        	</div>
        	
-        <p><input type="submit" value="Submit" /> 
+        <p><input type="submit" value="Bestätigen" /> 
         <input type="button" value="Abbrechen" class="bigButtons" onClick="gotoEinheitentyp()" />
 			<script>
 			function gotoEinheitentyp() {
