--- a/src/main/resources/templates/mateinupdate.html
+++ b/src/main/resources/templates/mateinupdate.html
@@ -58,7 +58,7 @@
         th:text="${error}">Validation error</p>
        	</div>                 	
 		
-        <p><input type="submit" value="Submit" />
+        <p><input type="submit" value="Bestätigen" />
         <button onclick="goBack()" class="bigButtons">Abbrechen</button>
 			<script>
 			function goBack() {
