--- a/src/main/resources/templates/mitarbeitertypupdate.html
+++ b/src/main/resources/templates/mitarbeitertypupdate.html
@@ -1,47 +1,59 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+	 <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
+ 	<link rel="import" href="/fragment/topnav.html">
     <title>Mitarbeitertyp Aktualisieren</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-	<h1>Mitarbeitertyp</h1>
-    <form action="#" th:action="@{/mitarbeitertypupdate/{id}(id=${mitarbeitertyp.id})}" th:object="${mitarbeitertyp}" method="post">
+<head th:replace="/fragment/header :: header"></head>	
+	<h2>Mitarbeitertyp</h2>
+<div class="container">
+<form action="#" th:action="@{/mitarbeitertypupdate/{id}(id=${mitarbeitertyp.id})}" th:object="${mitarbeitertyp}" method="post">
     
     	<p class="error-message"
 	    th:if="${#fields.hasGlobalErrors()}"
 	    th:each="error : ${#fields.errors('global')}"
  		th:text="${error}">Validation error</p>
                    
-		<div class="form-group"
+		<div class="row"
         th:classappend="${#fields.hasErrors('kuerzel')}? 'has-error':''">
-        <label for="kuerzel" class="control-label">Kürzel</label>
-        <input id="kuerzel"
-        class="form-control"
-        th:field="*{kuerzel}"/>
+        <div class="col-50">
+        <label for="kuerzel">Kürzel</label>
+        <input id="kuerzel" type="text" th:field="*{kuerzel}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('kuerzel')}"
         th:text="${error}">Validation error</p>
        	</div>
        	
-       	<div class="form-group"
+       	<div class="row"
         th:classappend="${#fields.hasErrors('name')}? 'has-error':''">
-        <label for="name" class="control-label">Name</label>
-        <input id="name"
-        class="form-control"
-        th:field="*{name}"/>
+        <div class="col-50">
+        <label for="name">Name</label>
+        <input id="name" type="text" th:field="*{name}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('name')}"
         th:text="${error}">Validation error</p>
        	</div>
        	
-        <p><input type="submit" value="Submit" /> </p>
-    </form>
-	<button onclick="goBack()">Abbrechen</button>
-	<script>
-	function goBack() {
-	    window.history.back();
-	}
-	</script>
+        <p><input type="submit" value="Bestätigen" /> </p>
+        <input type="button" onclick="goBack()" class="bigButtons" value="Abbrechen">
+			<script>
+			function goBack() {
+			    window.history.back();
+			}
+			</script>
+</form>
+</div>   
+	
 </body>
 </html>
