--- a/src/main/resources/templates/einheitentyp.html
+++ b/src/main/resources/templates/einheitentyp.html
@@ -36,7 +36,7 @@
         th:text="${error}">Validation error</p>
        	</div>
 		
-        <p><input type="submit" value="Submit" /> </p>
+        <p><input type="submit" value="Bestätigen" /> </p>
     </form>
 </div>
 <h2>Übersicht Einheitentypen</h2>
