--- a/src/main/resources/templates/lagerstandort.html
+++ b/src/main/resources/templates/lagerstandort.html
@@ -3,10 +3,10 @@
 		<head th:fragment="head">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<div th:replace="/fragment/footer :: footer"></div>
 	    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
 	    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
-	 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
+	 	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+	 	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
 	 	<link rel="import" href="/fragment/topnav.html">
 		<link rel='stylesheet' href='webjars/fullcalendar/3.5.1/dist/fullcalendar.css' />
 		<script src="webjars/jquery/2.0.3/jquery.min.js"></script>
@@ -26,7 +26,8 @@
 	<title th:text="@{${@environment.getProperty('matilda.lagerstandort')}}" />
 	<body>
 		<head th:replace="/fragment/header :: header"></head>
-		<h3>Einen neuen Lagerstandort hinzuf&uuml;gen</h3>
+		<h2>Einen neuen Lagerstandort hinzuf&uuml;gen</h2>
+<div class="container">
     	<form action="#" th:action="@{/lagerstandort}" th:object="${lagerstandort}" method="post">
     
 	    <p class="error-message"
@@ -34,57 +35,60 @@
 	    	th:each="error : ${#fields.errors('global')}"
  			th:text="${error}">Validation error</p>
                    
-		<div class="form-group"
+		<div class="row"
         	th:classappend="${#fields.hasErrors('name')}? 'has-error':''">
-        	<label for="name" class="control-label">Name</label>
-        	<input id="name"
-        		class="form-control"
-        		th:field="*{name}"/>
+        	<div class="col-50">
+        	<label for="name">Name</label>
+        	<input id="name" type="text" th:field="*{name}"/>
+        	</div>
         	<p class="error-message"
        			th:each="error: ${#fields.errors('name')}"
         		th:text="${error}">Validation error</p>
        	</div>
        	
-       	<div class="form-group"
+       	<div class="row"
         	th:classappend="${#fields.hasErrors('adresse')}? 'has-error':''">
-        	<label for="adresse" class="control-label">Adresse</label>
-        	<input id="adresse"
-        	class="form-control"
-        	th:field="*{adresse}"/>
+        	<div class="col-50">
+        	<label for="adresse">Adresse</label>
+        	<input id="adresse" type="text"	th:field="*{adresse}"/>
+        	</div>
         	<p class="error-message"
        			th:each="error: ${#fields.errors('adresse')}"
         		th:text="${error}">Validation error</p>
        	</div>
        	
-		<div class="form-group"
+		<div class="row"
         	th:classappend="${#fields.hasErrors('beschreibung')}? 'has-error':''">
-        	<label for="beschreibung" class="control-label">Beschreibung</label>
-        	<input id="beschreibung"
-        		class="form-control"
-        		th:field="*{beschreibung}"/>
+        	<div class="col-50">
+        	<label for="beschreibung">Beschreibung</label>
+        	<input id="beschreibung" type="text" th:field="*{beschreibung}"/>
+        	</div>
         	<p class="error-message"
        			th:each="error: ${#fields.errors('beschreibung')}"
         		th:text="${error}">Validation error</p>
        	</div>
         
-        <div class="form-group"
+        <div class="row"
         	th:classappend="${#fields.hasErrors('benutzer')}? 'has-error':''">
-        	<label for="benutzer" class="control-label">Verantwortlicher</label>
+        	<div class="col-50">
+        	<label for="benutzer">Verantwortlicher</label>
         	<select th:field="*{benutzer}">
   				<option th:each="benutzer : ${alleBenutzer}" 
          	 		th:value="${benutzer.id}" 
        	     		th:text="${benutzer.benutzername}"></option>
 			</select>
+			</div>
 			<p class="error-message"
        			th:each="error: ${#fields.errors('benutzer')}"
         		th:text="${error}">Validation error</p>
        	</div>
 		
-        <p><input type="submit" value="Submit" /></p>
+        <p><input type="submit" value="Bestätigen" /></p>
     	</form>
-		<h2>Übersicht Lagerstandorte</h2>
+  </div>
+		<h3>Übersicht Lagerstandorte</h3>
 		<div th:unless="${#lists.isEmpty(lagerstandorten)}">
-		<table class="table table-striped">
+<table class="mainTable" id="sortTable">
 			<thead>
 				<tr>
 					<th>Name</th>
@@ -100,7 +104,9 @@
 				<td th:text="${lagerstandort.beschreibung}"></td>
 				<td th:text="${lagerstandort.benutzer.benutzername}"></td>
 				<td>
-					<a href="#" data-th-href="@{/lagerstandortupdate/{id}(id=${lagerstandort.id})}">&Auml;ndern</a>
+					<a href="#" data-th-href="@{/lagerstandortupdate/{id}(id=${lagerstandort.id})}">
+					<input type="button" value="Ändern" class="buttons"/>
+					</a>
 				</td>
 			</tr>
 		</table>
@@ -121,10 +127,5 @@
 		</div>
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
-		<footer>
-			<div class="footer">
-				<a href="#Impressum" class="footerText">Impressum</a>
-			</div>
-		</footer>
 	</body>
 </html>
