--- a/src/main/resources/templates/materialeinheit.html
+++ b/src/main/resources/templates/materialeinheit.html
@@ -61,7 +61,7 @@
         th:text="${error}">Validation error</p>
        	</div>
      		
-        <p><input type="submit" value="Submit" /> </p>
+        <p><input type="submit" value="Bestätigen" /> </p>
     </form>
 </div>
 <h2>Übersicht zugewiesener Materialtypen</h2>
