--- a/src/main/resources/templates/materialtyp.html
+++ b/src/main/resources/templates/materialtyp.html
@@ -8,15 +8,16 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
- 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
  	<link rel="import" href="/fragment/topnav.html">
  	<title>Materialtyp</title>
 </head>
 	<body>
 		<head th:replace="/fragment/header :: header"></head>	
-		<div th:replace="/fragment/footer :: footer"></div>
 
-	<h3>Einen neuen Materialtyp hinzuf&uuml;gen</h3>
+	<h2>Einen neuen Materialtyp hinzuf&uuml;gen</h2>
+<div class="container">
     <form action="#" th:action="@{/materialtyp}" th:object="${materialtyp}" method="post">
     
     	<p class="error-message"
@@ -24,57 +25,57 @@
 	    th:each="error : ${#fields.errors('global')}"
  		th:text="${error}">Validation error</p>
                    
-		<div class="form-group"
+		<div class="row"
         th:classappend="${#fields.hasErrors('name')}? 'has-error':''">
-        <label for="name" class="control-label">Name</label>
-        <input id="name"
-        class="form-control"
-        th:field="*{name}"/>
+        <div class="col-50">
+	        <label for="name">Name</label>
+	        <input id="name" type="text" th:field="*{name}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('name')}"
         th:text="${error}">Validation error</p>
        	</div>
 		
-		<div class="form-group"
+		<div class="row"
         th:classappend="${#fields.hasErrors('menge')}? 'has-error':''">
-        <label for="menge" class="control-label">Menge</label>
-        <input id="menge"
-        class="form-control"
-        th:field="*{menge}"/>
+         <div class="col-50">
+        <label for="menge" >Menge</label>
+        <input id="menge" type="text" th:field="*{menge}"/>
+         </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('menge')}"
         th:text="${error}">Validation error</p>
        	</div>
         
-       	<div class="form-group"
+       	<div class="row"
         th:classappend="${#fields.hasErrors('beschreibung')}? 'has-error':''">
-        <label for="beschreibung" class="control-label">Beschreibung</label>
-        <input id="beschreibung"
-        class="form-control"
-        th:field="*{beschreibung}"/>
+        <div class="col-50">
+        <label for="beschreibung">Beschreibung</label>
+        <input id="beschreibung" type="text"  th:field="*{beschreibung}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('beschreibung')}"
         th:text="${error}">Validation error</p>
        	</div>
        	
-       	<div class="form-group"
+       	<div class="row"
         th:classappend="${#fields.hasErrors('link')}? 'has-error':''">
-        <label for="link" class="control-label">Link zu Benuterhandbuch</label>
-        <input id="link"
-        class="form-control"
-        th:field="*{link}"/>
+        <div class="col-50">
+        <label for="link">Link zum Benutzerhandbuch</label>
+        <input id="link" type="url"  th:field="*{link}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('link')}"
         th:text="${error}">Validation error</p>
        	</div>
        	
-        <p><input type="submit" value="Submit"/></p>
-
-    </form>
-    
-<h2>Übersicht Materialtyp</h2>
+        <p><input type="submit" value="Bestätigen"/></p>
+  </form>
+ </div>  
+   
+<h3>Übersicht Materialtyp</h3>
 <div th:unless="${#lists.isEmpty(materialtypen)}">
-<table class="table table-striped">
+<table class="mainTable" id="sortTable">
 <thead>
 <tr>
 <th>Name</th>
@@ -90,7 +91,9 @@
 <td th:text="${materialtyp.beschreibung}"></td>
 <td th:text="${materialtyp.link}"></td>
 <td>
-<a href="#" data-th-href="@{/materialtypupdate/{id}(id=${materialtyp.id})}">&Auml;ndern</a>
+	<a href="#" data-th-href="@{/materialtypupdate/{id}(id=${materialtyp.id})}">
+	<input type="button" value="Ändern" class="buttons"/>
+	</a>
 </td>
 </tr>
 </table>
@@ -117,4 +120,5 @@
 
 <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/sortTable.js}"/></script>
 </body>
