--- a/src/main/resources/templates/mitarbeitereinheit.html
+++ b/src/main/resources/templates/mitarbeitereinheit.html
@@ -57,7 +57,7 @@
         th:text="${error}">Validation error</p>
        	</div>
 	
-        <p><input type="submit" value="Submit" />
+        <p><input type="submit" value="Bestätigen" />
         	
         </p>
     </form>
