--- a/src/main/resources/templates/mitarbeitertyp.html
+++ b/src/main/resources/templates/mitarbeitertyp.html
@@ -8,15 +8,16 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
- 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
  	<link rel="import" href="/fragment/topnav.html">
  	<title>Mitarbeitertyp</title>
 </head>
 	<body>
 		<head th:replace="/fragment/header :: header"></head>	
-		<div th:replace="/fragment/footer :: footer"></div>
 <body>
-	<h3>Einen neuen Mitarbeitertyp hinzuf&uuml;gen</h3>
+	<h2>Einen neuen Mitarbeitertyp hinzuf&uuml;gen</h2>
+<div class="container">
     <form action="#" th:action="@{/mitarbeitertyp}" th:object="${mitarbeitertyp}" method="post">
     
     	<p class="error-message"
@@ -24,34 +25,35 @@
 	    th:each="error : ${#fields.errors('global')}"
  		th:text="${error}">Validation error</p>
                    
-		<div class="form-group"
+		<div class="row"
         th:classappend="${#fields.hasErrors('kuerzel')}? 'has-error':''">
-        <label for="kuerzel" class="control-label">Kürzel</label>
-        <input id="kuerzel"
-        class="form-control"
-        th:field="*{kuerzel}"/>
+        <div class="col-50">
+        <label for="kuerzel" >Kürzel</label>
+        <input id="kuerzel" type="text" th:field="*{kuerzel}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('kuerzel')}"
         th:text="${error}">Validation error</p>
        	</div>
        	
-       	<div class="form-group"
+       	<div class="row"
         th:classappend="${#fields.hasErrors('name')}? 'has-error':''">
+        <div class="col-50">
         <label for="name" class="control-label">Name</label>
-        <input id="name"
-        class="form-control"
-        th:field="*{name}"/>
+        <input id="name" type="text" th:field="*{name}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('name')}"
         th:text="${error}">Validation error</p>
        	</div>
        	
-        <p><input type="submit" value="Submit" /> </p>
+        <p><input type="submit" value="Bestätigen" /> </p>
     </form>
-<h2>Übersicht Mitarbeitertypen</h2>
+</div>
+<h3>Übersicht Mitarbeitertypen</h3>
 
 <div th:unless="${#lists.isEmpty(mitarbeitertypen)}">
-<table class="table table-striped">
+<table class="mainTable">
 <thead>
 <tr>
 <th>Kuerzel</th>
@@ -63,7 +65,9 @@
 <td th:text="${mitarbeitertyp.kuerzel}"></td>
 <td th:text="${mitarbeitertyp.name}"></td>
 <td>
-<a href="#" data-th-href="@{/mitarbeitertypupdate/{id}(id=${mitarbeitertyp.id})}">&Auml;ndern</a>
+	<a href="#" data-th-href="@{/mitarbeitertypupdate/{id}(id=${mitarbeitertyp.id})}">
+	<input type="button" class="buttons" value="Ändern"/>
+	</a>
 </td>
 </tr>
 </table>
