--- a/src/main/resources/templates/veranstaltung.html
+++ b/src/main/resources/templates/veranstaltung.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
- 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" type="text/css" th:href="@{/css/forms.css}"/>
  	<link rel="import" href="/fragment/topnav.html">
 </head>
 <body class="genBackground">
 		<head th:replace="/fragment/header :: header"></head>	
-		<div th:replace="/fragment/footer :: footer"></div>
 		
 		<title th:text="@{${@environment.getProperty('matilda.events')}}"></title>
 <h2>Übersicht Veranstaltungen</h2>
@@ -56,7 +56,6 @@
 	<input type="Button" value="gebuchtes Material" class="buttons"/>
 	</a>
 </td>
-
 </tr>
 </table>
 </div>
