--- a/src/main/resources/templates/lagerstandortupdate.html
+++ b/src/main/resources/templates/lagerstandortupdate.html
@@ -23,47 +23,48 @@
 	    th:each="error : ${#fields.errors('global')}"
  		th:text="${error}">Validation error</p>
                    
-		<div class="form-group"
+		<div class="row"
         th:classappend="${#fields.hasErrors('name')}? 'has-error':''">
-        <label for="name" class="control-label">Name</label>
-        <input id="name"
-        class="form-control"
-        th:field="*{name}"/>
+        <div class="col-50">
+	        <label for="name">Name</label>
+	        <input id="name" type="text" th:field="*{name}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('name')}"
         th:text="${error}">Validation error</p>
        	</div>
        	
-       	<div class="form-group"
+       	<div class="row"
         th:classappend="${#fields.hasErrors('adresse')}? 'has-error':''">
-        <label for="adresse" class="control-label">Adresse</label>
-        <input id="adresse"
-        class="form-control"
-        th:field="*{adresse}"/>
+        <div class="col-50">
+	        <label for="adresse" >Adresse</label>
+	        <input id="adresse" type="text" th:field="*{adresse}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('adresse')}"
         th:text="${error}">Validation error</p>
        	</div>
        	
-		<div class="form-group"
+		<div class="row"
         th:classappend="${#fields.hasErrors('beschreibung')}? 'has-error':''">
-        <label for="beschreibung" class="control-label">Beschreibung</label>
-        <input id="beschreibung"
-        class="form-control"
-        th:field="*{beschreibung}"/>
+        <div class="col-50">
+			<label for="beschreibung">Beschreibung</label>
+	        <input id="beschreibung" type="text" th:field="*{beschreibung}"/>
+        </div>
         <p class="error-message"
        	th:each="error: ${#fields.errors('beschreibung')}"
         th:text="${error}">Validation error</p>
        	</div>
         
-        <div class="form-group"
+        <div class="row"
         th:classappend="${#fields.hasErrors('benutzer')}? 'has-error':''">
-        <label for="benutzer" class="control-label">Verantwortlicher</label>
+        <div class="col-50">
+        <label for="benutzer">Verantwortlicher</label>
         <select th:field="*{benutzer}">
-  			<option th:each="benutzer : ${alleBenutzer}" 
-         	 th:value="${benutzer.id}" 
+  			<option th:each="benutzer : ${alleBenutzer}" th:value="${benutzer.id}" 
        	     th:text="${benutzer.benutzername}"></option>
-		</select></p>
+		</select>
+		</div>
 		<p class="error-message"
        	th:each="error: ${#fields.errors('benutzer')}"
         th:text="${error}">Validation error</p>
