--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -28,6 +28,14 @@
   				<option value="A4">A4</option>
 			</select>
     	</div>
+		<div>
+    		<p>PDF?: </p>
+    		<select name="whichReportToPrint">
+				<option value="ProStandort">Pro Standort</option>
+  				<option value="ProVeranstaltungAusgabeschein">Pro Veranstaltung Ausgabeschein</option>
+  				<option value="ProVeranstaltungPackliste">Pro Veranstaltung Packliste</option>
+			</select>
+    	</div>
     	<span class="validity"></span>
     	<br />
     	<input type="submit" value="PDF Ausgabe erzeugen"/>
