--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -3,11 +3,12 @@
       xmlns:th="http://www.thymeleaf.org"
       layout:decorate="~{fragments/layout}">
 <head>
-    <title>Access Denied</title>
+    <title>Page not found</title>
 </head>
 <body>
 <div layout:fragment="content" th:remove="tag">
-    <h1>Custom not found</h1>
+    <h1>404</h1>
+    <h2>the page was not found</h2>
     <p><a href="/" th:href="@{/}">Back to home page</a></p>
 </div>
 </body>
