--- a/src/main/resources/templates/inventur.html
+++ b/src/main/resources/templates/inventur.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	
-	<h1>Inventur</h1>
+	<h2>Inventur</h2>
 <div class="container">
     <form action="#" th:action="@{/inventur/{id}(id=${material.id})}" th:object="${material}" method="post">
     
@@ -92,8 +92,8 @@
         <p><input type="submit" value="Bestätigen"/></p>
         <p><input type="button" class="bigButtons" onclick="goBackToMaterialverwaltung()" value="Zurück"/></p>
 			<script>
-			function goBackToVeranstaltung() {
-			    window.location.href="../materialverwaltung";
+			function goBackToMaterialverwaltung() {
+			    window.location.href="../materialverwaltung/1";
 			}
 			</script>
     </form>
