--- a/src/main/resources/templates/lieferung.html
+++ b/src/main/resources/templates/lieferung.html
@@ -88,7 +88,7 @@
 		</div>
 
 		<p>
-			<input type="submit" value="Submit" />
+			<input type="submit" value="Bestätigen" />
 		</p>
 
 	<button onclick="goBack()" class="bigButtons">Abbrechen</button>
