--- a/src/main/resources/templates/passwordaenderung.html
+++ b/src/main/resources/templates/passwordaenderung.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
- 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
  	<link rel="import" href="/fragment/topnav.html">
  	<title th:text="@{${@environment.getProperty('matilda.passwordchange')}}"></title>
 </head>
@@ -17,7 +17,7 @@
 		<div class="container">
 		    <div class="row">
 		        <div class="col-md-6 col-md-offset-3">
-		            <h1>Change Password</h1>
+		            <h2>Change Password</h2>
 		
 					<form action="#" th:action="@{/passwordaenderung}" th:object="${UserCreationDto}" method="post">
 					    <fieldset>
@@ -47,7 +47,7 @@
 									</tr>
 					            </tbody>
 					        </table>
-							<input type="submit" id="submitButton" th:value="Speichern"/>
+							<input type="submit" id="submitButton" th:value="Speichern" class="bigButtons"/>
 					    </fieldset>
 					</form>
 
