--- a/src/main/resources/templates/veranstaltungbuchung.html
+++ b/src/main/resources/templates/veranstaltungbuchung.html
@@ -10,13 +10,12 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
  	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
  	<link rel="import" href="/fragment/topnav.html">
+ 	<head th:replace="/fragment/header :: header"></head>
 </head>
 	<body>
 <h2>Buchung für Veranstaltung</h2>
 
-
 <table class="mainTable">
-
 <tr>
 <th>Einheitentyp</th>
 <th>Materialtyp</th>
@@ -31,10 +30,10 @@
 <td th:text="${vb.getEinheitentyp().getName()}"></td>	
 <td th:text="${vb.getMaterialtyp().getName()}"></td>
         <td>
-          <table>
+          <table class="mainTable">
             <tbody>
               <tr>
-              <th>Num</th>
+              <th>ID</th>
               <th>Bezeichnung</th>
 		      <th>Bestand</th>
               </tr>
@@ -50,12 +49,14 @@
 <td th:text="${vb.getWunschMaterial()}"></td>
 <td th:text="${vb.getWunschMenge()}"></td>
 <td>
-<a href="#" data-th-href="@{/veranstaltungbuchungupdate/{id}(id=${vb.id})}">Bearbeiten</a>
+<a href="#" data-th-href="@{/veranstaltungbuchungupdate/{id}(id=${vb.id})}">
+<input type="button" value="Bearbeiten" class="buttons"/>
+</a>
 </td>		
 </tr>
 </table>
 <form action="#" th:action="@{/veranstaltungbuchung}" th:object="${veranstaltungBuchung}" method="post">
-<p><input type="submit" value="Buchen" /> </p>
+<p><input type="submit" value="Buchen" class="bigButtons" /> </p>
 </form>
 <div class="container">
 			<div th:if="${param.nomaterial}">
