Corrected wrong link in header.html
* Wrong a href corrected in header.html

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -1,5 +1,4 @@
 <html>
-	<link rel="stylesheet" type="text/css" th:href="@{/css/index.css}" />
 	<body>
 		<div class="topnav" id="myTopnav" th:fragment="header">
 		<!--	<img class="logo" src="./Pictures/WRK_Logo.jpg" alt="Logo"> -->
@@ -28,10 +27,10 @@
 			 	</button>
 				<div class="dropdown-content-admin">
 					<div sec:authorize="hasAuthority('ADMIN')">
-						<a href="mitarbeiterverwaltung">Mitarbeiterverwaltung</a>
-						<a href="registration" th:text="#{benutzerregistrierung}"></a>
+						<a href="/mitarbeiterverwaltung">Mitarbeiterverwaltung</a>
+						<a href="/registration" th:text="#{benutzerregistrierung}"></a>
+						<a href="/passwordaenderung" th:text="#{passwort_aendern}"></a>
 					</div>
-						<a href="passwordaenderung" th:text="#{passwort_aendern}"></a>
 					<div>
 						<a href="javascript: document.logoutForm.submit()" > Sign out </a>
 						<form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true">
