--- a/src/main/resources/templates/passwordaenderung.html
+++ b/src/main/resources/templates/passwordaenderung.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/index.css}"/>
+ 	<link rel="stylesheet" th:href="@{/css/index.css}"/>
  	<link rel="import" href="/fragment/topnav.html">
  	<title th:text="@{${@environment.getProperty('matilda.passwordchange')}}"></title>
 </head>
@@ -17,7 +17,7 @@
 		<div class="container">
 		    <div class="row">
 		        <div class="col-md-6 col-md-offset-3">
-		            <h2>Change Password</h2>
+		            <h1>Change Password</h1>
 		
 					<form action="#" th:action="@{/passwordaenderung}" th:object="${UserCreationDto}" method="post">
 					    <fieldset>
@@ -36,8 +36,7 @@
 									    			th:value="*{users[__${itemStat.index}__].username}" 
 									    			class="radioButton" 
 									    			th:onclick="${'inputClick('''+ itemStat.index +''')'}" /></td>
-									    <td><input	th:field="*{users[__${itemStat.index}__].username}" 
-									    			disabled/></td>
+									    <td><label><span th:text="*{users[__${itemStat.index}__].username}"></span></label></td>
 									    <td><input	class="passwordField" 
 									    			type="password" 
 									    			name="passwordField" 
@@ -47,7 +46,7 @@
 									</tr>
 					            </tbody>
 					        </table>
-							<input type="submit" id="submitButton" th:value="Speichern" class="bigButtons"/>
+							<input type="submit" id="submitButton" th:value="Speichern"/>
 					    </fieldset>
 					</form>
 
