updated CSS / HTML files
* changed transparency of input type buttons
* removed footers
* removed minimalist.table
* materialtyp: changed 'Menge' to 'Einheit'
* removed disabled from 'Speichern' button in mitarbeiterverwaltung
* removed 'Einheiten hinzufügen' Button from neuveranstaltung.html
* sec:authorize="hasAuthority('ADMIN') for Roles in registration.html
* added forms.css to veranstaltungbuchung.html

--- a/src/main/resources/templates/materialtyp.html
+++ b/src/main/resources/templates/materialtyp.html
@@ -39,7 +39,7 @@
 		<div class="row"
         th:classappend="${#fields.hasErrors('menge')}? 'has-error':''">
          <div class="col-50">
-        <label for="menge" >Menge</label>
+        <label for="menge" >Einheit</label>
         <input id="menge" type="text" th:field="*{menge}"/>
          </div>
         <p class="error-message"
@@ -79,7 +79,7 @@
 <thead>
 <tr>
 <th>Name</th>
-<th>Menge</th>
+<th>Einheit</th>
 <th>Beschreibung</th>
 <th>Link</th>
 </tr>
