--- a/src/main/resources/templates/mitarbeiterverwaltung.html
+++ b/src/main/resources/templates/mitarbeiterverwaltung.html
@@ -57,7 +57,7 @@
 					        </table>
 					        <br />
 					        <div style="text-align:center;">
-								<input type="submit" id="submitButton" th:value="Speichern" name="submit" disabled="disabled"/>
+								<input type="submit" id="submitButton" th:value="Speichern" name="submit"/>
 							</div>
 					    </fieldset>
 					</form>
