--- a/src/main/resources/templates/veranstaltungupdate.html
+++ b/src/main/resources/templates/veranstaltungupdate.html
@@ -55,7 +55,7 @@
         th:text="${error}">Validation error</p>
 		</div>
     	
-        <p><input type="submit" value="Submit" /> </p>
+        <p><input type="submit" value="Bestätigen" /> </p>
         <button onclick="goBack()" class="bigButtons">Abbrechen</button>
 			<script>
 			function goBack() {
